Sat Sep 16 16:14:40 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, common.in, instruby.rb, ext/extmk.rb, lib/mkmf.rb:
	  use instruby.rb to install extensions instead of ext/extmk.rb.

	* instruby.rb: store installed list into the file.

	* ext/dbm/extconf.rb: allow multiple candidates for dbm-type.

	* ext/io/wait/extconf.rb: suspicious checking_for.

Thu Sep 14 16:11:15 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_intern): raise SecurityError only when $SAFE
	  level is greater than zero.  [ruby-core:08862]

	* parse.y (rb_interned_p): new function to check if a string is
	  already interned.

	* object.c (str_to_id): use rb_str_intern().

Wed Sep 13 18:43:05 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* README.EXT: English adjustment.  [ruby-core:08851] and
	  [ruby-core:08852]

Wed Sep 13 18:25:18 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el (ruby-parse-partial): better here-doc support.
	  a patch from Marshall T. Vandegrift <llasram at gmail.com>.
	  [ruby-core:08804]

Wed Sep 13 16:43:36 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_intern): prohibit interning tainted string.

Wed Sep 13 01:14:21 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#getopts): works with pre-registered
	  options.  [ruby-core:08826]

Sun Sep 10 20:27:13 2006  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb, lib/date/format.rb: updated based on date2 3.9.1.

Tue Jan 10 09:18:03 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (stack_extend): fixed prototype.

	* eval.c (rb_require_safe): prevent extension from loading twice.
	  fixed: [ruby-dev:29523]

Sat Sep  9 23:50:38 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big_mul0): bignum multiplication without
	  normalization.

	* bignum.c (rb_big_pow): use rb_big_mul0().  [ruby-dev:29547]

Sat Sep  9 14:08:38 2006  Eric Hodel  <drbrain@segment7.net>
