@@ -1,4 +1,4 @@
-Sat Sep 16 16:14:40 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Mon Jan 16 16:20:35 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* Makefile.in, common.in, instruby.rb, ext/extmk.rb, lib/mkmf.rb:
 	  use instruby.rb to install extensions instead of ext/extmk.rb.
@@ -8,6 +8,12 @@ Sat Sep 16 16:14:40 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 	* ext/dbm/extconf.rb: allow multiple candidates for dbm-type.
 
 	* ext/io/wait/extconf.rb: suspicious checking_for.
+
+	* ext/pty/pty.c (establishShell): parent pid is not used.
+
+	* ext/pty/pty.c (freeDevice): not used.
+
+	* ext/pty/pty.c (get_device_once): removed garbage right brace.
 
 Thu Sep 14 16:11:15 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
